--- a/assignment/checkpoints/htmlcss/index.html
+++ b/assignment/checkpoints/htmlcss/index.html
@@ -3,11 +3,26 @@
     <head>
         <meta charset="utf-8" />
         <!-- attach the style.css stylesheet -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!-- create a header with a level-1 heading with your name -->
+        <header>
+            <h1>Their Name</h1>
+        </header>
         <!-- create an unordered list inside a div tag -->
         <!-- create three list items with fun facts about you -->
+        <div>
+            <ul>
+                <li>Fun fact</li>
+                <li>Fun facts are fun</li>
+                <li>Fun facts are fundamental</li>
+            </ul>
+        </div>
+        
         <!-- create a footer with a paragraph tag with your favorite quote -->
+        <footer>
+            <p>"You don't manage people, you manage things. You lead people" - Grace Hopper</p>
+        </footer>
     </body>
 </html>
