--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title? from "Page Title" to "Hello World" -->
+    <!-- Change the <title> from "Page Title" to "Hello World" -->
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="helloWorld.js"></script>
 </head>
 <body>
     <!-- Create a header with an <h1> containing your name -->
