narrowed down and focused. tried to reduce verbocity

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <!-- Create a header element.  -->
+    <!-- Create a header element  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
 
@@ -18,7 +18,7 @@
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
 
-    <!-- Create a footer element. -->
+    <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
