Complete prompts in HTML assignment

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,34 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
-    <!-- Inside the header, add an <h1> element containing your name -->
+    <header>
+        <!-- Inside the header, add an <h1> element containing your name -->
+        <h1>Zac Delventhal</h1>
+    </header>
 
     <!-- Include an image -->
+    <img src="https://avatars.githubusercontent.com/u/8889580" alt="Zac Delventhal">
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <ul>
+        <li>Graduated from a coding bootcamp in 2016 band have been working professionally since</li>
+        <li>Used to be an (unpaid) actor</li>
+        <li>Published a boardgame called <a href="https://taelmoor.com" target="_blank">Taelmoor</a> with a React Native companion app</li>
+    </ul>
 
     <!-- Create a footer element -->
+    <footer>
+        <!-- Inside your footer, put a <p> element with your favorite quote -->
+        <p><i>"The art of programming is the art of organizing complexity, of mastering multitude and avoiding its bastard chaos as effectively as possible."</i></p>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;– Edsger W. Dijkstra</p>
+    </footer>
 
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
