Complete styling assignment

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -29,7 +29,7 @@
     <!-- Create a footer element -->
     <footer>
         <!-- Inside your footer, put a <p> element with your favorite quote -->
-        <p><i>"The art of programming is the art of organizing complexity, of mastering multitude and avoiding its bastard chaos as effectively as possible."</i></p>
+        <p>"The art of programming is the art of organizing complexity, of mastering multitude and avoiding its bastard chaos as effectively as possible."</p>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;– Edsger W. Dijkstra</p>
     </footer>
 
