Add hello world JS to index.html

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -33,5 +33,6 @@
         <p>&nbsp;&nbsp;&nbsp;&nbsp;– Edsger W. Dijkstra</p>
     </footer>
 
+    <script src="helloWorld.js"></script>
 </body>
 </html>
