--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,8 +11,12 @@
 </head>
 <body>
     <!-- Create a header element  -->
+    <header>
+        <!-- Inside the header, add an <h1> element containing your name -->
+        <h1>Hello there!</h1>
+        <h1>these competes are tricky :D</h1>
+    </header>
 
-    <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
 
