added content to HTML

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- Change the <title> from "Page Title" to "Hello World" -->
+  <title>Unit 1 Assignment</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
-    <!-- Create a header element  -->
+  <!-- Create a header element  -->
+  <header>
+    <h1>It's ya boi</h1>
+  </header>
+  <!-- <!-- Include an image --> --> 😎
+  <img src="../images/Me.JPG" />
 
-    <!-- Inside the header, add an <h1> element containing your name -->
+  <!-- Create an unordered list with 3 list items of fun facts about you -->
+  <ul>
+    <li>I have been a musican for most of my life</li>
+    <li>I enjoy working out and running</li>
+    <li>My favorite animal is a penguin</li>
+  </ul>
+  <!-- Create a footer element -->
+  <footer>
+    <p>Thanks for reading :)</p>
+  </footer>
 
-    <!-- Include an image -->
-
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
+  <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
+
 </html>
