Upaded HTML per assignment

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <!-- Create a header element  -->
+    <header>
+        <h1>Tyler Lowe</h1>
+    </header>
 
     <!-- Inside the header, add an <h1> element containing your name -->
-
+<img src="" alt="English bulldog">
     <!-- Include an image -->
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
