completed html changes

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,21 +4,30 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<script type="text/javascript" src="/Users/hannahengelhart/Documents/Prime/assignment-unit-1/assignment/helloWorld.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
+<header>
     <!-- Inside the header, add an <h1> element containing your name -->
+<h1>Hannah Engelhart</h1>
 
+</header>
+<img src="../images/profile_pic.jpeg" alt="Profile Picture">
     <!-- Include an image -->
-
+<ul>
+    <li>I went to school for automechanics before going for pyschology.</li>
+    <li>I go to cosplay conventions with my partner.</li>
+    <li>I used to work at the suicide hotline for MN.</li>
+</ul>
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+<footer>
     <!-- Create a footer element -->
+<p>"Be curious, not judegmental" - Walt Whitman</p>
+</footer>
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
