I have added in my name as the Header

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <!-- Create a header element  -->
-
+    <header>
+        <h1> Brandon Paulson </h1>
+    </header>
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
