updated css per assignment

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,17 +12,24 @@
 <body>
     <!-- Create a header element  -->
     <header>
+            <!-- Inside the header, add an <h1> element containing your name -->
         <h1>Tyler Lowe</h1>
     </header>
 
-    <!-- Inside the header, add an <h1> element containing your name -->
-<img src="" alt="English bulldog">
+
+
     <!-- Include an image -->
-
+    <img src="../images/Bulldog.jpeg" alt="English bulldog">
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+<ul>
+    <li>I enjoy camping</li>
+    <li>I like Jeeps</li>
+    <li>I have a 14 year old daughter</li>
+</ul>
     <!-- Create a footer element -->
-
+<footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+    <p>"Don't compare your 1st chapter to someone else's 10th chapter"</p>
+</footer>
 </body>
 </html>
