--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="../assignment/helloWorld.js"></script>
 </head>
 <body>
     <!-- Create a header element  -->
