add html requirements

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Change the <title> from "Page Title" to "Hello World" -->
     <title>Unit 1 Assignment</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <!-- Create a header element  -->
-
-    <!-- Inside the header, add an <h1> element containing your name -->
-
+    <header>
+      <!-- Inside the header, add an <h1> element containing your name -->
+      <h1>Luke Gartner</h1>
+    </header>
     <!-- Include an image -->
+    <img src="../images/me.jpg" alt="portrait" />
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <ul>
+      <li>Likes to mountain bike</li>
+      <li>Plays guitar</li>
+      <li>Participates in water ski pyramids</li>
+    </ul>
 
     <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
-</body>
+    <footer>
+      <!-- Inside your footer, put a <p> element with your favorite quote -->
+      <p>"Art is never finished, only abandoned." -Leornardo da Vinci</p>
+    </footer>
+  </body>
 </html>
