--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,29 +5,49 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Change the <title> from "Page Title" to "Hello World" -->
-  <title>Unit 1 Assignment</title>
+  <title>Hello World, It's me.. Michael</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fasthand&family=Poppins:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <!-- Create a header element  -->
   <header>
-    <h1>It's ya boi</h1>
+    <h1>Hey there... <br>
+      <span class="right">I'm Michael 😎</span>
+    </h1>
   </header>
-  <!-- <!-- Include an image --> --> 😎
-  <img src="../images/Me.JPG" />
-
-  <!-- Create an unordered list with 3 list items of fun facts about you -->
-  <ul>
-    <li>I have been a musican for most of my life</li>
-    <li>I enjoy working out and running</li>
-    <li>My favorite animal is a penguin</li>
-  </ul>
+  <div class="container">
+    <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <div class="about-container">
+      <ul>
+        <li>MN Born and Raised. I grew up in St. Paul, and lived in NYC for a period of time as well.</li><br>
+        <li>I make experimental Electronic Music. Check out a video <a
+            href="https://www.youtube.com/watch?v=vpn-3QEDXck" target="blank" rel="noreferrer">here!</a></li><br>
+        <li>My favorite animals are penguins 🐧</li><br>
+        <li>I love listening to a good album while coding with a warm cup of coffee ☕️</li><br>
+      </ul>
+    </div>
+    <div class="image-container">
+      <img class="self" src="../images/self.png" alt="a picture of me" />
+    </div>
+  </div>
   <!-- Create a footer element -->
   <footer>
-    <p>Thanks for reading :)</p>
+    <p class="quote">Favorite Quote: <br> </p>
+    <blockquote class="cursive">“As I walked out the door toward the gate that would lead to my freedom,
+      I knew if I didn't leave my bitterness and hatred behind, I'd still be in prison." </blockquote>
+    <p class="quote">
+      <br>
+      - Nelson Mandela
+    </p>
+
   </footer>
 
   <!-- Inside your footer, put a <p> element with your favorite quote -->
