--- a/assignment/index.html
+++ b/assignment/index.html
@@ -52,5 +52,6 @@
 
   <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
+<script src="./helloWorld.js"></script>
 
 </html>
