add css requirements

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -15,15 +15,20 @@
       <!-- Inside the header, add an <h1> element containing your name -->
       <h1>Luke Gartner</h1>
     </header>
-    <!-- Include an image -->
-    <img src="../images/me.jpg" alt="portrait" />
-
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-    <ul>
-      <li>Likes to mountain bike</li>
-      <li>Plays guitar</li>
-      <li>Participates in water ski pyramids</li>
-    </ul>
+    <div class="content">
+      <article>
+        <!-- Include an image -->
+        <img src="../images/me.jpg" alt="portrait" />
+      </article>
+      <article>
+        <!-- Create an unordered list with 3 list items of fun facts about you -->
+        <ul>
+          <li>Likes to mountain bike</li>
+          <li>Plays guitar</li>
+          <li>Participates in water ski pyramids</li>
+        </ul>
+      </article>
+    </div>
 
     <!-- Create a footer element -->
     <footer>
