add js requirements

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -35,5 +35,7 @@
       <!-- Inside your footer, put a <p> element with your favorite quote -->
       <p>"Art is never finished, only abandoned." -Leornardo da Vinci</p>
     </footer>
+
+    <script src="./helloWorld.js"></script>
   </body>
 </html>
