--- a/assignment/index.html
+++ b/assignment/index.html
@@ -31,7 +31,7 @@
         My favorite quote is, "Work smarter not harder"
     </p>
 </footter>
-<script src="helloWorld.js" ></script>/
+<script src="helloWorld.js" ></script>
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
     </body>
