footer was spelled incorrectly

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -26,11 +26,11 @@
         <li>I have a masters degree in conservation biology</li>
 </ul>
     <!-- Create a footer element -->
-<footter>
+<footer>
     <p> 
         My favorite quote is, "Work smarter not harder"
     </p>
-</footter>
+</footer>
 <script src="helloWorld.js" ></script>
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
