fixed mobile versions

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -17,14 +17,12 @@
 </head>
 
 <body>
-  <!-- Create a header element  -->
   <header>
     <h1>Hey there... <br>
       <span class="right">I'm Michael 😎</span>
     </h1>
   </header>
   <div class="container">
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
     <div class="about-container">
       <ul>
         <li>MN Born and Raised. I grew up in St. Paul, and lived in NYC for a period of time as well.</li><br>
@@ -38,7 +36,6 @@
       <img class="self" src="../images/self.png" alt="a picture of me" />
     </div>
   </div>
-  <!-- Create a footer element -->
   <footer>
     <p class="quote">Favorite Quote: <br> </p>
     <blockquote class="cursive">“As I walked out the door toward the gate that would lead to my freedom,
@@ -49,9 +46,8 @@
     </p>
 
   </footer>
-
-  <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
-<script src="./helloWorld.js"></script>
+<script src="./helloWorld.js">
+</script>
 
 </html>
