made sure to hit all requirements

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -38,8 +38,8 @@
   </div>
   <footer>
     <p class="quote">Favorite Quote: <br> </p>
-    <blockquote class="cursive">“As I walked out the door toward the gate that would lead to my freedom,
-      I knew if I didn't leave my bitterness and hatred behind, I'd still be in prison." </blockquote>
+    <blockquote class="cursive"><i>“As I walked out the door toward the gate that would lead to my freedom,
+        I knew if I didn't leave my bitterness and hatred behind, I'd still be in prison." </i></blockquote>
     <p class="quote">
       <br>
       - Nelson Mandela
