small changes to the HTML quote

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,7 +12,9 @@
 <body>
     <!-- Create a header element  -->
     <header>
-        <h1> Brandon Paulson </h1>
+        <h1> 
+            Brandon Paulson 
+        </h1>
     </header>
     <!-- Inside the header, add an <h1> element containing your name -->
     <!-- Include an image -->
@@ -28,7 +30,7 @@
     <!-- Create a footer element -->
 <footer>
     <p> 
-        My favorite quote is, "Work smarter not harder"
+        One simple quote that I heard in college that really stuck with me was, "Work smarter not harder"
     </p>
 </footer>
 <script src="helloWorld.js" ></script>
