Fills in index.html and adds styling

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <!-- Create a header element  -->
+    <header class="header-footer">
+        <h1>Andreas Copan</h1>
+    </header>
 
-    <!-- Inside the header, add an <h1> element containing your name -->
+    <main>
+        <img src="../images/DSC05576.jpg" width="200">
 
-    <!-- Include an image -->
+        <ul>
+            <li>I was born in Vienna, Austria.</li>
+            <li>I like to play classical guitar.</li>
+            <li>My wife and I like to listen to sci-fi audiobooks while doing chores.</li>
+        </ul>
+    </main>
 
-    <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
+    <footer class="header-footer">
+        <p>"Because you have made us for yourself, our hearts are restless till they find their rest in you."</p>
+        <p>Augustine, Confessions, 1.1.1.</p>
+    </footer>
 </body>
 </html>
