Links JS file with hello world message

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,7 +6,10 @@
     <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- This line links in the css stylesheet, so that it will be included with this HTML file -->
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!-- This line similarly links in the JavaScript file -->
+    <script src="helloWorld.js"></script>
 </head>
 <body>
     <header class="header-footer">
