--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,28 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
+    <header>
     <!-- Inside the header, add an <h1> element containing your name -->
-
+        <h1>Daniel Davidson</h1>
+    </header>
     <!-- Include an image -->
-
+    <img src="https://imgs.search.brave.com/vuX54W-ZBcgoKUjtatireX1YVq-75j3BC6v14DpHz0U/rs:fit:1200:800:1/g:ce/aHR0cDovL3RyYXZl/bGRpZ2cuY29tL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDE2LzEw/L1Rob3JzLVdlbGwt/UGhvdG9ncmFwaHkt/YXQtU3Vuc2V0Lmpw/Zw" alt="Thor's Well">
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+    <ul>
+        <li>I love to read books</li>
+        <li>One destination on my bucket list is to see Thor's Well</li>
+        <li>Baking bread is my new hobby</li>
+    </ul>
     <!-- Create a footer element -->
-
+    <footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+        <p>"Just because you took longer than others doesn't mean you failed. Remember that."</p>
+    </footer>
 </body>
 </html>
