--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,6 +7,7 @@
     <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="helloWorld.js"></script>
 </head>
 <body>
     <!-- Create a header element  -->
