--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,43 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <!-- Create a header element  -->
-
+    <!-- Create a header element -->
     <!-- Inside the header, add an <h1> element containing your name -->
+    <header>
+        <div class="header">
+            <h1>Jose Sanchez</h1>
+        </div>
+    </header>
 
     <!-- Include an image -->
+    <div>
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/grogu-baby-yoda-the-book-of-boba-fett-1644399939.jpg?crop=0.408xw:0.980xh;0.259xw,0.00408xh&resize=640:*" alt="Grogu">
+    </div>
+
+    <div>  
+        <p class="aboutMe">About Me:</p>
+    </div>
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
+    <div class="list">
+        <ul>
+            <li>I'm a huge Star Wars fan!</li>
+            <li>I served 7 years in the US Army.</li>
+            <li>I play video games in my spare time.</li>
+        </ul>
+    </div>
 
     <!-- Create a footer element -->
-
-    <!-- Inside your footer, put a <p> element with your favorite quote -->
+    <footer>
+        <div class="footer">
+            <p>"This is the Way!"</p>   
+        </div>
+    </footer>
 </body>
 </html>
