assisgnment-unit-1-js

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -42,5 +42,6 @@
             <p>"This is the Way!"</p>   
         </div>
     </footer>
+    <script src="helloWorld.js"></script>
 </body>
 </html>
