I made edits to the CSS code to apply directly to the footer and headers, along with adding a border to the imnage directly, and changed the title to Hello World

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -27,11 +27,12 @@
         <li>I have a wife and two cats </li>
         <li>I have a masters degree in conservation biology</li>
 </ul>
+<p> 
+    One simple quote that I heard in college that really stuck with me was, "Work smarter not harder"
+</p>
     <!-- Create a footer element -->
 <footer>
-    <p> 
-        One simple quote that I heard in college that really stuck with me was, "Work smarter not harder"
-    </p>
+This footer is radical
 </footer>
 <script src="helloWorld.js" ></script>
 
