Added tests for week 1 assignment.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,21 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
     <title>Unit 1 Assignment</title>
+    <!-- Used for automated testing -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js" integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+
     <!-- Create a header element  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
 
+    <main>
     <!-- Include an image -->
 
     <!-- Create an unordered list with 3 list items of fun facts about you -->
 
+    </main>
     <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+
+    <div id="container">
+        <!-- Used for automated testing -->
+        <div id="mocha"></div>
+        <div class="note">
+            Make sure to answer questions in the checkpoings/terminal.txt file.
+        </div>
+    </div>
+
+    <link rel="stylesheet" href="../test/test.styles.css" />
+    <script src="../test/test.js"></script>
 </body>
 </html>
