--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <!-- Used for automated testing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,26 +15,47 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div class="header">
+        <h1>Michael Jancik-Kitowski</h1>
+    </div>
 
     <!-- Create a header element  -->
 
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <main>
+        <img src="https://media.licdn.com/dms/image/D5603AQEsIMRGkZ8AtA/profile-displayphoto-shrink_800_800/0/1695940610625?e=1704326400&v=beta&t=tYdL02h-UTtnuj5ii0nQ32prNkCNdoa-qgScA42XXc0" alt"Michael Jancik Kitowski">
     <!-- Include an image -->
-
+        <ul>
+            <li>I enjoy listening to all types of music</li>
+            <li>I know how to cook an amazing curry</li>
+            <li>I have never flown to a different continent</li>
+        </ul>
     <!-- Create an unordered list with 3 list items of fun facts about you -->
 
     </main>
     <!-- Create a footer element -->
-
+        <div class="footer">
+            <p>"To be yourself in a world that is constantly trying to make you something else is the greatest accomplishment." Ralph Waldo Emerson</p>
+        </div>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 
     <div id="container">
         <!-- Used for automated testing -->
         <div id="mocha"></div>
         <div class="note">
-            Make sure to answer questions in the checkpoings/terminal.txt file.
+            <ol>
+                <li>The command for listing the files in the current folder is "ls"</li>
+                <li>The command for changing directories is "cd"</li>
+                <li>The command for going up a folder is "cd .."</li>
+                <li>The quickest way to make a new folder is to use the term mkdir""</li>
+                <li>If you used ls on an empty folder nothing would pop up. On the other hand if you used it on a folder that was full you would pull up a full list of items within that folder.</li>
+                <li>The quick way to create a new file is using the phrase touch and then the name of the file</li>
+                <li>The output is git version 2.33.0</li>
+                <li>You would run the command git status to see the status of your code to see if it was properly saved or not</li>
+                <li>git add adds all the files into your staging area</li>
+                <li>The command to push your commited changes onto github is "git push origin main"</li>
+            </ol>
         </div>
     </div>
 
